css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  position: relative;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  background: #e5e5e5;

  /* background-color: #f7f7f9; */
}

.background-color {
  background-color: #fff;
}

.wrapper {
  min-height: 5410px;
  height: auto;
  width: 100%;
  background-color: #e5e5e5;
  padding: 0 24px 8px 24px;
}

.container-homepage {
  background: url("/images/header-shapes-mobile.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: 10px 2px;
  max-height: 800px;
  height: auto;
  max-width: 100%;
  border-bottom-left-radius: 80px;
  background-color: #fff;
  padding: 114px, 24px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 120px;
}

.home-only-container {
  padding-top: 114px;
}

.header-1 {
  background-color: #6070ff;
  mix-blend-mode: multiply;
}

.status-bar {
  min-width: 375px;
  height: 44px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  align-content: center;
  z-index: 100;
}

.hamburger-clicked span {
  color: #fff;
  padding-left: 32px;
}

.mobile-status .cellular,
.mobile-status .wifi,
.mobile-status .battery {
  background-color: white;
}

.status-bar .time {
  width: 24px;
  height: 21px;
  padding: 3px 0 2px 21px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.status-bar .time span {
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  text-align: center;

  /* letter-spacing: -0.28px; */
  padding: 3px 0 2px 0;
  color: black;
}

.mobile-status {
  width: 66px;
  height: 11.34px;
  padding: 17.33px 14.67px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.mobile-status .wifi {
  width: 15.27px;
  height: 10.97px;
}

.mobile-status .battery {
  width: 24.33px;
  height: 11.33px;
}

.status-img {
  display: block;
}

.logo-menu-header {
  height: 48px;
  max-width: 100%;
  padding: 58px 24px 0 24px;
  display: flex;
  justify-content: space-between;
}

.my-logo,
.my-logo-mobile {
  width: 100px;
  height: 40px;
  color: #6070ff;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  display: flex;
  align-items: center;
  text-align: center;
  text-decoration: none;
}

li a i {
  color: #6070ff;
  width: 16px;
  margin-bottom: 138px;
}

.frame-7-languages i {
  height: 6px;
  width: 12px;
  color: #5e6c84;
}

.skill-and-framework i {
  width: 6px;
  height: 12px;
  color: #5e6c84;
}

.menu-bar button i {
  height: 12px;
  width: 18px;
  color: #6070ff;
}

li .social-network i {
  color: grey;
  padding-right: 10px;
  font-size: 20px;
  font-weight: 700;
}

.menu-bar button i:active {
  color: #fff;
}

li {
  list-style: none;
}

/* Styling anchor tags */
a {
  text-decoration: none;
  font-family: 'Poppins', sans-serif;
}

li a {
  text-decoration-style: none;
  position: relative;
}

.section-home {
  max-width: 375px;
  padding: 114px 24px 136px 24px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  gap: 12px;
}

.name-welcome {
  color: #17284d;
  font-style: normal;
  font-size: 40px;
  font-weight: 700;
  line-height: 52px;
  height: 101px;
  max-width: 100%;
  display: flex;
  align-items: center;
}

.description-of-me {
  color: #344563;
  padding-top: 36px;
  padding-bottom: 12px;
}

.lets-connect-about {
  height: 80px;
  max-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}

.lets-connect-statement {
  max-width: 100%;
  height: 24px;
  color: #7f8cff;
  font-weight: 500;
  text-transform: uppercase;
  line-height: 24px;
}

.contact-with-social {
  color: #7f8cff;
}

.social-networks li {
  display: inline-block;
}

.social-network {
  text-decoration: none;
  width: 40px;
  height: 40px;
  padding: 8px;
  display: flex;
  align-items: flex-start;
  border-radius: 8px;
}

.social-networks .social-network i:hover {
  color: #6070ff;
  box-shadow: 0 8px 16px rgb(64, 83, 252, 0.24);
  border-radius: 8px;
}

.grids-wrapper {
  max-height: 4100px;
  height: auto;
  max-width: 100%;

  /* margin: 114px 24px 114px 24px; */
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  grid-template-columns: 100%;
  row-gap: 88px;
  background-color: #e5e5e5;

  /* background-color: #f7f7f9; */
  padding: 114px 0;
}

.grid {
  height: 552px;
  height: auto;
  min-width: 327px;

  /* max-width: 100%; */
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16px;
  gap: 12px;
}

.grid1 {
  grid-row: 1 /2;
}

.grid2 {
  grid-row: 2 /3;
}

.grid3 {
  grid-row: 3 /4;
}

.grid4 {
  grid-row: 4 /5;
}

.grid2,
.grid4 {
  height: 596px;
}

.grid-img {
  width: 295px;
  height: 220px;
  border-radius: 8px;
}

.grid-title {
  height: 36px;
  width: 295px;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.experience-container {
  height: 32px;
  max-width: 100%;
  display: flex;
  align-items: center;
  gap: 12px;
}

.experience-item {
  height: 16px;
  max-width: 100%;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  padding: 8px 0;
  color: #7a869a;
  display: flex;
  align-items: center;
}

.experience .canopy {
  color: #344563;
}

.experience .counter {
  height: 8px;
  width: 8px;
  color: #c1c7d0;
  display: flex;
  align-items: center;
}

.project-description {
  height: 76px;
  min-width: 295px;
  max-width: 100%;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
}
/* ... */

